--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Arabista — Luxury Abaya & Modestwear</title>
-  <meta name="description" content="Arabista — premium abaya and modestwear crafted for everyday elegance. Shop our signature black abaya and accessories." />
+  <meta name="description" content="Arabista — premium black abayas with practical features and timeless design. Crafted in Malaysia, loved worldwide." />
   <meta name="theme-color" content="#0F0F10" />
   <meta property="og:title" content="Arabista — Luxury Abaya & Modestwear" />
-  <meta property="og:description" content="Premium abaya and modestwear crafted for everyday elegance." />
+  <meta property="og:description" content="Premium Nidha Dubai fabric, practical features, and timeless designs that celebrate faith and style." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://your-domain.com" />
   <meta property="og:image" content="https://your-domain.com/cover.jpg" />
 
-  <!-- Fonts (free) -->
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-  <!-- Tailwind via CDN (zero build) -->
+  <!-- Tailwind (CDN) -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -32,9 +32,7 @@
             ink: { DEFAULT: '#111213' },
             luxe: { DEFAULT: '#C0A062' }
           },
-          boxShadow: {
-            soft: '0 10px 30px rgba(0,0,0,0.08)'
-          },
+          boxShadow: { soft: '0 10px 30px rgba(0,0,0,0.08)' },
         }
       }
     }
@@ -46,12 +44,25 @@
   </style>
 </head>
 <body class="bg-brand text-white antialiased tap-highlight-none">
-  <!-- Nav -->
+  <!-- Navbar -->
   <header class="fixed top-0 inset-x-0 z-50 backdrop-blur supports-[backdrop-filter]:bg-brand/60 bg-brand/80">
     <div class="max-w-screen-xl mx-auto px-4 sm:px-6">
-      <div class="h-14 flex items-center justify-between">
-        <a href="#home" class="font-display tracking-[0.18em] text-[20px] leading-none">ARABISTA</a>
-        <div class="flex items-center gap-3">
+      <!-- 3 columns: left wordmark, center logo, right links -->
+      <div class="h-14 grid grid-cols-3 items-center">
+        <!-- Left: ARABISTA text -->
+        <div class="col-span-1 flex items-center">
+          <a href="#home" class="font-display tracking-[0.18em] text-[14px] leading-none hover:text-luxe transition">ARABISTA</a>
+        </div>
+
+        <!-- Center: logo -->
+        <div class="col-span-1 flex items-center justify-center">
+          <a href="#home" aria-label="Arabista Home">
+            <img src="images/logo.png" alt="Arabista logo" class="h-11 w-auto"/>
+          </a>
+        </div>
+
+        <!-- Right: links / burger -->
+        <div class="col-span-1 flex items-center justify-end gap-3">
           <a href="#shop" class="hidden sm:inline-block text-sm hover:text-luxe transition">Shop</a>
           <a href="#about" class="hidden sm:inline-block text-sm hover:text-luxe transition">About</a>
           <a href="#contact" class="hidden sm:inline-block text-sm hover:text-luxe transition">Contact</a>
@@ -77,10 +88,10 @@
           <div class="absolute inset-0 bg-gradient-to-t from-brand via-transparent"></div>
           <div class="absolute inset-x-0 bottom-0 p-6 sm:p-10">
             <h1 class="font-display text-4xl sm:text-6xl leading-[1.02] tracking-tight">Timeless Black. Effortless Grace.</h1>
-            <p class="mt-3 sm:mt-4 text-white/80 max-w-xl text-sm sm:text-base">Premium Nidha Dubai fabric, cut for movement and comfort. Crafted in Cheras, loved across Malaysia.</p>
+            <p class="mt-3 sm:mt-4 text-white/85 max-w-2xl text-sm sm:text-base">Premium Nidha Dubai fabric, practical features, and timeless designs that celebrate faith and style. Crafted in Malaysia, loved worldwide.</p>
             <div class="mt-5 flex items-center gap-3">
               <a href="#shop" class="inline-flex items-center gap-2 bg-white text-ink px-5 py-3 rounded-xl text-sm font-medium hover:opacity-90 transition shadow-soft">
-                Shop Signature Abaya
+                Shop Abaya Collection
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14m-7 7 7-7-7-7"/></svg>
               </a>
               <a href="#about" class="inline-flex items-center gap-2 px-5 py-3 rounded-xl ring-1 ring-white/15 text-white/90 text-sm hover:bg-white/5 transition">
@@ -93,37 +104,41 @@
     </div>
   </section>
 
-  <!-- USP bar -->
+  <!-- USP strip -->
   <section class="reveal">
     <div class="max-w-screen-xl mx-auto px-4 sm:px-6">
-      <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-7 gap-3 sm:gap-6 py-6 sm:py-10">
+      <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-8 gap-3 sm:gap-6 py-6 sm:py-10">
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-fabric.png" alt="Smooth Nidha Dubai texture" class="w-full h-24 object-cover"/>
-          <p class="p-2">Fabric close-up: smooth Nidha Dubai texture</p>
+          <img src="images/usp-fabric.png" alt="Premium Nidha Dubai fabric — soft, breathable, and luxurious" class="w-full h-24 object-cover"/>
+          <p class="p-2">Premium Nidha Dubai fabric — soft, breathable, and luxurious.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-iron.png" alt="Minimal iron ease" class="w-full h-24 object-cover"/>
-          <p class="p-2">Minimal iron ease with steaming abaya</p>
+          <img src="images/usp-iron.png" alt="Minimal iron — wrinkle-resistant for daily wear" class="w-full h-24 object-cover"/>
+          <p class="p-2">Minimal iron — wrinkle-resistant for daily wear.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-shawl.png" alt="Complimentary shawl" class="w-full h-24 object-cover"/>
-          <p class="p-2">Complimentary shawl in chiffon silk (100D)</p>
+          <img src="images/usp-shawl.png" alt="Complimentary chiffon silk shawl (100D)" class="w-full h-24 object-cover"/>
+          <p class="p-2">Complimentary chiffon silk shawl (100D) with every abaya.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-zip.png" alt="Nursing friendly zip" class="w-full h-24 object-cover"/>
-          <p class="p-2">10 inch front zip • Nursing friendly</p>
+          <img src="images/usp-zip.png" alt="10-inch front zip — nursing friendly" class="w-full h-24 object-cover"/>
+          <p class="p-2">10-inch front zip — nursing friendly.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-pocket.png" alt="Abaya pockets" class="w-full h-24 object-cover"/>
-          <p class="p-2">Left and right pockets</p>
+          <img src="images/usp-pocket.png" alt="Left and right pockets — style meets function" class="w-full h-24 object-cover"/>
+          <p class="p-2">Left and right pockets — style meets function.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-inner-sleeve.png" alt="Inner sleeve" class="w-full h-24 object-cover"/>
-          <p class="p-2">Inner arm lining with elastic cuff (wudhu' friendly)</p>
+          <img src="images/usp-inner-sleeve.png" alt="Inner sleeve lining — wudhu’-friendly and discreet" class="w-full h-24 object-cover"/>
+          <p class="p-2">Inner sleeve lining — wudhu’-friendly and discreet.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-box.png" alt="Premium gift box" class="w-full h-24 object-cover"/>
-          <p class="p-2">Premium black box packaging • Perfect as a gift</p>
+          <img src="images/usp-box.png" alt="Premium black gift box packaging" class="w-full h-24 object-cover"/>
+          <p class="p-2">Premium black gift box packaging — perfect for gifting.</p>
+        </div>
+        <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
+          <img src="images/usp-courier.png" alt="Free express courier delivery nationwide — 1–3 business days" class="w-full h-24 object-cover"/>
+          <p class="p-2">Free express courier delivery nationwide — 1–3 business days.</p>
         </div>
       </div>
     </div>
@@ -134,62 +149,65 @@
     <div class="max-w-screen-xl mx-auto px-4 sm:px-6">
       <div class="flex items-end justify-between">
         <h2 class="font-display text-2xl sm:text-4xl">Signature Collection</h2>
-        <a href="#contact" class="hidden sm:inline text-sm hover:text-luxe">Talk to a Stylist →</a>
+        <a href="#contact" class="hidden sm:inline text-sm hover:text-luxe">Reach us →</a>
       </div>
 
-      <p class="mt-3 text-white/70 text-sm">Explore our four series. Each series contains multiple styles with different features and prices (we'll finalize pricing later).</p>
+      <p class="mt-3 text-white/70 text-sm">Explore our four series. Each series contains multiple styles with different features and prices.</p>
 
       <div class="mt-5 grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-3 sm:gap-6">
-        <!-- Card 1: Dahlia Series -->
+        <!-- Dahlia -->
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
             <img src="images/product-dahlia.png" alt="Dahlia Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500"/>
           </div>
           <div class="p-3 sm:p-4">
             <h3 class="font-display text-lg">Dahlia Series</h3>
-            <p class="text-white/70 text-xs sm:text-sm">Multiple styles & prices</p>
+            <p class="text-white/70 text-xs sm:text-sm">Simple, 1 piece style (non-cardigan style)</p>
             <div class="mt-2 flex items-center justify-between text-sm">
               <span class="text-white/50">—</span>
               <a href="#contact" class="underline underline-offset-4 decoration-white/30 hover:text-luxe">View series</a>
             </div>
           </div>
         </article>
-        <!-- Card 2: Zahra Series -->
+
+        <!-- Zahra -->
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
             <img src="images/product-zahra.png" alt="Zahra Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500"/>
           </div>
           <div class="p-3 sm:p-4">
             <h3 class="font-display text-lg">Zahra Series</h3>
-            <p class="text-white/70 text-xs sm:text-sm">Multiple styles & prices</p>
+            <p class="text-white/70 text-xs sm:text-sm">Minimalist, timeless and elegant</p>
             <div class="mt-2 flex items-center justify-between text-sm">
               <span class="text-white/50">—</span>
               <a href="#contact" class="underline underline-offset-4 decoration-white/30 hover:text-luxe">View series</a>
             </div>
           </div>
         </article>
-        <!-- Card 3: Warda Series -->
+
+        <!-- Warda -->
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
             <img src="images/product-warda.png" alt="Warda Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500"/>
           </div>
           <div class="p-3 sm:p-4">
             <h3 class="font-display text-lg">Warda Series</h3>
-            <p class="text-white/70 text-xs sm:text-sm">Multiple styles & prices</p>
+            <p class="text-white/70 text-xs sm:text-sm">Minimalist, timeless and elegant</p>
             <div class="mt-2 flex items-center justify-between text-sm">
               <span class="text-white/50">—</span>
               <a href="#contact" class="underline underline-offset-4 decoration-white/30 hover:text-luxe">View series</a>
             </div>
           </div>
         </article>
-        <!-- Card 4: Maraya Series -->
+
+        <!-- Maraya -->
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
             <img src="images/product-maraya.png" alt="Maraya Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500"/>
           </div>
           <div class="p-3 sm:p-4">
             <h3 class="font-display text-lg">Maraya Series</h3>
-            <p class="text-white/70 text-xs sm:text-sm">Multiple styles & prices</p>
+            <p class="text-white/70 text-xs sm:text-sm">Premium series, perfect for dinner and events</p>
             <div class="mt-2 flex items-center justify-between text-sm">
               <span class="text-white/50">—</span>
               <a href="#contact" class="underline underline-offset-4 decoration-white/30 hover:text-luxe">View series</a>
@@ -205,10 +223,14 @@
     <div class="max-w-screen-xl mx-auto px-4 sm:px-6 py-10">
       <div class="grid lg:grid-cols-2 gap-8 items-center">
         <div>
-          <h2 class="font-display text-2xl sm:text-4xl mb-4">Our Craftsmanship</h2>
+          <h2 class="font-display text-2xl sm:text-4xl mb-4">Our Craftsmanship, Our Story</h2>
           <p class="text-white/70 text-sm sm:text-base leading-relaxed">
-            Every Arabista abaya is carefully crafted by skilled seamstresses using premium Nidha Dubai fabric.
-            From precise cuts to detailed finishing, we uphold timeless artistry that blends modern elegance with traditional modestwear.
+            Founded in 2019, Arabista Enterprise is a proud Bumiputera brand specializing in black abayas.
+            Inspired by Middle Eastern fashion but rooted in Malaysian values, we design abayas that empower women to express faith and elegance without compromise.
+          </p>
+          <p class="text-white/70 text-sm sm:text-base leading-relaxed mt-3">
+            Each piece is meticulously crafted using premium Nidha Dubai fabric, cut by skilled seamstresses, and finished with practical features that fit modern lifestyles.
+            From Malaysia to the world, we are committed to making Arabista synonymous with the word abaya.
           </p>
         </div>
         <div class="overflow-hidden rounded-2xl shadow-soft">
@@ -226,11 +248,9 @@
     </div>
     <div class="relative max-w-screen-md mx-auto px-4 sm:px-6 py-16 text-center">
       <h2 class="font-display text-2xl sm:text-4xl mb-4">Let’s Talk on WhatsApp</h2>
-      <p class="text-white/80 text-sm sm:text-base mb-6">
-        Have a question about sizing, shipping, or styling? Our team is just a message away.
-      </p>
+      <p class="text-white/80 text-sm sm:text-base mb-6">Have a question about sizing, design or purchase method? Our team is ready to help.</p>
       <a href="https://wa.me/60126913286" target="_blank" class="inline-flex items-center gap-2 bg-luxe text-ink px-6 py-3 rounded-xl text-sm font-medium hover:opacity-90 transition shadow-soft">
-        Chat on WhatsApp
+        Chat with Arabista
         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14m-7 7 7-7-7-7"/></svg>
       </a>
     </div>
