Update index.html and add product page

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <p class="text-white/70 text-xs sm:text-sm">Simple, 1 piece style (non-cardigan style)</p>
             <div class="mt-2 flex items-center justify-between text-sm">
               <span class="text-white/50">—</span>
-              <a href="#contact" class="underline underline-offset-4 decoration-white/30 hover:text-luxe">View series</a>
+              <a href="product-d01.html" class="underline underline-offset-4 decoration-white/30 hover:text-luxe">View product</a>
             </div>
           </div>
         </article>
@@ -180,7 +180,7 @@
             <p class="text-white/70 text-xs sm:text-sm">Minimalist, timeless and elegant</p>
             <div class="mt-2 flex items-center justify-between text-sm">
               <span class="text-white/50">—</span>
-              <a href="#contact" class="underline underline-offset-4 decoration-white/30 hover:text-luxe">View series</a>
+              <a href="product-d01.html" class="underline underline-offset-4 decoration-white/30 hover:text-luxe">View product</a>
             </div>
           </div>
         </article>
@@ -195,7 +195,7 @@
             <p class="text-white/70 text-xs sm:text-sm">Minimalist, timeless and elegant</p>
             <div class="mt-2 flex items-center justify-between text-sm">
               <span class="text-white/50">—</span>
-              <a href="#contact" class="underline underline-offset-4 decoration-white/30 hover:text-luxe">View series</a>
+              <a href="product-d01.html" class="underline underline-offset-4 decoration-white/30 hover:text-luxe">View product</a>
             </div>
           </div>
         </article>
@@ -210,7 +210,7 @@
             <p class="text-white/70 text-xs sm:text-sm">Premium series, perfect for dinner and events</p>
             <div class="mt-2 flex items-center justify-between text-sm">
               <span class="text-white/50">—</span>
-              <a href="#contact" class="underline underline-offset-4 decoration-white/30 hover:text-luxe">View series</a>
+              <a href="product-d01.html" class="underline underline-offset-4 decoration-white/30 hover:text-luxe">View product</a>
             </div>
           </div>
         </article>
