--- a/product-d01.html
+++ b/product-d01.html
@@ -377,7 +377,7 @@
         document.querySelectorAll('[data-src]').forEach(b=>b.classList.remove('thumb-active'));
         btn.classList.add('thumb-active'); 
         mainImg.src=btn.dataset.src;
-        document.getElementById('gallery').scrollIntoView({behavior:'smooth', block:'center'});
+        document.getElementById('gallery').scrollIntoView({behavior:'smooth', block:'start'});
       });
     });
 
