--- a/product-d01.html
+++ b/product-d01.html
@@ -93,29 +93,20 @@
     <section class="max-w-screen-xl mx-auto px-4 sm:px-6 grid lg:grid-cols-2 gap-8 items-start" id="gallery">
       <!-- Gallery -->
       <div>
-        <div class="aspect-[3/4] bg-black/30 rounded-2xl overflow-hidden relative">
-          <!-- Main media slot: start with autoplaying video -->
-          <div id="mediaSlot" class="w-full h-full">
-            <video id="mainVideo" autoplay muted loop playsinline class="w-full h-full object-cover">
-              <source src="images/d01-hero.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-          </div>
+        <div class="aspect-[3/4] bg-black/30 rounded-2xl overflow-auto relative">
+          <img id="mainImg" src="images/d01-1.jpg" alt="Dahlia D01 Abaya — front view" class="w-full h-full object-cover">
+    <button id="imgPrev" type="button" aria-label="Previous image"
+      class="absolute z-10 left-2 top-1/2 -translate-y-1/2 bg-black/50 hover:bg-black/70 rounded-full w-10 h-10 flex items-center justify-center">
+      <span aria-hidden="true" class="text-white text-2xl leading-none select-none">‹</span>
+    </button>
+    <button id="imgNext" type="button" aria-label="Next image"
+      class="absolute z-10 right-2 top-1/2 -translate-y-1/2 bg-black/50 hover:bg-black/70 rounded-full w-10 h-10 flex items-center justify-center">
+      <span aria-hidden="true" class="text-white text-2xl leading-none select-none">›</span>
+    </button>
 
-          <!-- Prev/Next arrows (active when image is shown) -->
-          <button id="imgPrev" type="button" aria-label="Previous image"
-            class="absolute z-10 left-2 top-1/2 -translate-y-1/2 bg-black/50 hover:bg-black/70 rounded-full w-10 h-10 flex items-center justify-center">
-            <span aria-hidden="true" class="text-white text-2xl leading-none select-none">‹</span>
-          </button>
-          <button id="imgNext" type="button" aria-label="Next image"
-            class="absolute z-10 right-2 top-1/2 -translate-y-1/2 bg-black/50 hover:bg-black/70 rounded-full w-10 h-10 flex items-center justify-center">
-            <span aria-hidden="true" class="text-white text-2xl leading-none select-none">›</span>
-          </button>
         </div>
-
-        <!-- Thumbnails -->
         <div class="mt-3 grid grid-cols-4 gap-2">
-          <button class="rounded-xl overflow-hidden thumb-active" data-src="images/d01-1.jpg"><img src="images/d01-1-thumb.jpg" class="w-full h-20 object-cover" alt=""></button>
+          <button class="thumb-active rounded-xl overflow-hidden" data-src="images/d01-1.jpg"><img src="images/d01-1-thumb.jpg" class="w-full h-20 object-cover" alt=""></button>
           <button class="rounded-xl overflow-hidden" data-src="images/d01-2.jpg"><img src="images/d01-2-thumb.jpg" class="w-full h-20 object-cover" alt=""></button>
           <button class="rounded-xl overflow-hidden" data-src="images/d01-3.jpg"><img src="images/d01-3-thumb.jpg" class="w-full h-20 object-cover" alt=""></button>
           <button class="rounded-xl overflow-hidden" data-src="images/d01-4.jpg"><img src="images/d01-4-thumb.jpg" class="w-full h-20 object-cover" alt=""></button>
@@ -333,7 +324,8 @@
       }
       </script>
     </section>
-<section class="reveal max-w-screen-xl mx-auto px-4 sm:px-6 mt-10">
+    <!-- Related -->
+    <section class="reveal max-w-screen-xl mx-auto px-4 sm:px-6 mt-10">
       <h2 class="font-display text-2xl sm:text-3xl">You may also like</h2>
       <div class="mt-4 grid grid-cols-2 sm:grid-cols-4 gap-3 sm:gap-6">
         <a href="product-zahra.html" class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
@@ -354,8 +346,6 @@
         </a>
       </div>
     </section>
-    <!-- Related -->
-    
   </main>
 
   <!-- Footer -->
