--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
     <div class="relative max-w-screen-xl mx-auto px-0 sm:px-6">
       <div class="overflow-hidden rounded-none sm:rounded-3xl">
         <div class="relative">
-          <video autoplay muted loop playsinline class="w-full h-[70vh] sm:h-[80vh] object-cover brightness-[.75]">
+          <video autoplay muted loop playsinline webkit-playsinline class="w-full h-[70vh] sm:h-[80vh] object-cover brightness-[.75]">
   <source src="images/hero.mp4" type="video/mp4" />
-  Your browser does not support the video tag.
 </video>
           <div class="absolute inset-0 bg-gradient-to-t from-brand via-transparent"></div>
           <div class="absolute inset-x-0 bottom-0 p-6 sm:p-10">
