--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
     <div class="relative max-w-screen-xl mx-auto px-0 sm:px-6">
       <div class="overflow-hidden rounded-none sm:rounded-3xl">
         <div class="relative">
-          <video autoplay muted loop playsinline webkit-playsinline class="w-full h-[70vh] sm:h-[80vh] object-cover brightness-[.75]">
+          <video autoplay muted loop playsinline webkit-playsinline
+       poster="images/hero-poster.jpg"
+       class="w-full h-[70vh] sm:h-[80vh] object-cover brightness-[.75]">
   <source src="images/hero.mp4" type="video/mp4" />
 </video>
           <div class="absolute inset-0 bg-gradient-to-t from-brand via-transparent"></div>
