--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         <!-- Center: logo -->
         <div class="col-span-1 flex items-center justify-center">
           <a href="#home" aria-label="Arabista Home">
-            <img src="images/logo.png" alt="Arabista logo" class="h-11 w-auto"/>
+            <img src="images/logo.png" alt="Arabista logo"
+     class="h-11 w-auto"
+     width="1600" height="1600"/>
           </a>
         </div>
 
@@ -113,35 +115,51 @@
     <div class="max-w-screen-xl mx-auto px-4 sm:px-6">
       <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-8 gap-3 sm:gap-6 py-6 sm:py-10">
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-fabric.png" alt="Premium Nidha Dubai fabric — soft, breathable, and luxurious" class="w-full h-24 object-cover"/>
+          <img src="images/usp-fabric.png" alt="Premium Nidha Dubai fabric"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="600" height="600"/>
           <p class="p-2">Premium Nidha Dubai fabric — soft, breathable, and luxurious.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-iron.png" alt="Minimal iron — wrinkle-resistant for daily wear" class="w-full h-24 object-cover"/>
+          <img src="images/usp-iron.png" alt="Minimal iron"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="600" height="600"/>
           <p class="p-2">Minimal iron — wrinkle-resistant for daily wear.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-shawl.png" alt="Complimentary chiffon silk shawl (100D)" class="w-full h-24 object-cover"/>
+          <img src="images/usp-shawl.png" alt="Complimentary chiffon silk shawl"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="600" height="600"/>
           <p class="p-2">Complimentary chiffon silk shawl (100D) with every abaya.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-zip.png" alt="10-inch front zip — nursing friendly" class="w-full h-24 object-cover"/>
+          <img src="images/usp-zip.png" alt="10-inch front zip"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="600" height="600"/>
           <p class="p-2">10-inch front zip — nursing friendly.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-pocket.png" alt="Left and right pockets — style meets function" class="w-full h-24 object-cover"/>
+          <img src="images/usp-pocket.png" alt="Left and right pockets"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="385" height="385"/>
           <p class="p-2">Left and right pockets — style meets function.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-inner-sleeve.png" alt="Inner sleeve lining — wudhu’-friendly and discreet" class="w-full h-24 object-cover"/>
+          <img src="images/usp-inner-sleeve.png" alt="Inner sleeve lining"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="600" height="600"/>
           <p class="p-2">Inner sleeve lining — wudhu’-friendly and discreet.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-box.png" alt="Premium black gift box packaging" class="w-full h-24 object-cover"/>
+          <img src="images/usp-box.png" alt="Premium black gift box packaging"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="600" height="600"/>
           <p class="p-2">Premium black gift box packaging — perfect for gifting.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-courier.png" alt="Free express courier delivery nationwide — 1–3 business days" class="w-full h-24 object-cover"/>
+          <img src="images/usp-courier.png" alt="Free express courier delivery"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="1024" height="1024"/>
           <p class="p-2">Free express courier delivery nationwide — 1–3 business days.</p>
         </div>
       </div>
@@ -162,7 +180,9 @@
         <!-- Dahlia -->
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
-            <img src="images/product-dahlia.png" alt="Dahlia Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500"/>
+            <img src="images/product-dahlia.png" alt="Dahlia Series"
+     class="w-full h-full object-cover group-hover:scale-105 transition duration-500"
+     loading="lazy" decoding="async" width="864" height="1184"/>
           </div>
           <div class="p-3 sm:p-4">
             <h3 class="font-display text-lg">Dahlia Series</h3>
@@ -177,7 +197,9 @@
         <!-- Zahra -->
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
-            <img src="images/product-zahra.png" alt="Zahra Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500"/>
+            <img src="images/product-zahra.png" alt="Zahra Series"
+     class="w-full h-full object-cover group-hover:scale-105 transition duration-500"
+     loading="lazy" decoding="async" width="864" height="1184"/>
           </div>
           <div class="p-3 sm:p-4">
             <h3 class="font-display text-lg">Zahra Series</h3>
@@ -192,7 +214,9 @@
         <!-- Warda -->
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
-            <img src="images/product-warda.png" alt="Warda Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500"/>
+            <img src="images/product-warda.png" alt="Warda Series"
+     class="w-full h-full object-cover group-hover:scale-105 transition duration-500"
+     loading="lazy" decoding="async" width="864" height="1184"/>
           </div>
           <div class="p-3 sm:p-4">
             <h3 class="font-display text-lg">Warda Series</h3>
@@ -207,7 +231,9 @@
         <!-- Maraya -->
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
-            <img src="images/product-maraya.png" alt="Maraya Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500"/>
+            <img src="images/product-maraya.png" alt="Maraya Series"
+     class="w-full h-full object-cover group-hover:scale-105 transition duration-500"
+     loading="lazy" decoding="async" width="864" height="1184"/>
           </div>
           <div class="p-3 sm:p-4">
             <h3 class="font-display text-lg">Maraya Series</h3>
@@ -238,7 +264,9 @@
           </p>
         </div>
         <div class="overflow-hidden rounded-2xl shadow-soft">
-          <img src="images/about-story.png" alt="Arabista craftsmanship" class="w-full h-full object-cover"/>
+          <img src="images/about-story.png" alt="Arabista craftsmanship"
+     class="w-full h-full object-cover"
+     loading="lazy" decoding="async" width="1344" height="768"/>
         </div>
       </div>
     </div>
@@ -247,7 +275,9 @@
   <!-- Contact / WhatsApp CTA -->
   <section id="contact" class="relative reveal mt-6">
     <div class="absolute inset-0">
-      <img src="images/contact-whatsapp.png" alt="Contact Arabista on WhatsApp" class="w-full h-full object-cover brightness-50 blur-sm"/>
+      <img src="images/contact-whatsapp.png" alt="Contact Arabista on WhatsApp"
+     class="w-full h-full object-cover brightness-50 blur-sm"
+     loading="lazy" decoding="async" width="1024" height="1024"/>
       <div class="absolute inset-0 bg-gradient-to-t from-brand/85 via-brand/70 to-brand/60"></div>
     </div>
     <div class="relative max-w-screen-md mx-auto px-4 sm:px-6 py-16 text-center">
