--- a/product-d01.html
+++ b/product-d01.html
@@ -95,9 +95,15 @@
       <div>
         <div class="aspect-[3/4] bg-black/30 rounded-2xl overflow-auto relative">
           <!-- NEW: Autoplaying hero video (initial) -->
-          <video id="mainVideo" src="images/d01-hero.mp4" autoplay muted loop playsinline class="w-full h-full object-cover"></video>
+          <video id="mainVideo"
+       src="images/d01-hero.mp4"
+       autoplay muted loop playsinline
+       poster="images/d01-hero-poster-720.jpg"
+       class="w-full h-full object-cover"></video>
           <!-- Existing main image (hidden until a thumbnail/arrow is used) -->
-          <img id="mainImg" src="images/d01-1.jpg" alt="Dahlia D01 Abaya — front view" class="w-full h-full object-cover" style="display:none;">
+          <img id="mainImg" src="images/d01-1.jpg" alt="Dahlia D01 Abaya — front view"
+     class="w-full h-full object-cover"
+     width="1200" height="1600"/>
           <button id="imgPrev" type="button" aria-label="Previous image"
             class="absolute z-10 left-2 top-1/2 -translate-y-1/2 bg-black/50 hover:bg-black/70 rounded-full w-10 h-10 flex items-center justify-center">
             <span aria-hidden="true" class="text-white text-2xl leading-none select-none">‹</span>
@@ -108,10 +114,14 @@
           </button>
         </div>
         <div class="mt-3 grid grid-cols-4 gap-2">
-          <button class="thumb-active rounded-xl overflow-hidden" data-src="images/d01-1.jpg"><img src="images/d01-1-thumb.jpg" class="w-full h-20 object-cover" alt=""></button>
-          <button class="rounded-xl overflow-hidden" data-src="images/d01-2.jpg"><img src="images/d01-2-thumb.jpg" class="w-full h-20 object-cover" alt=""></button>
-          <button class="rounded-xl overflow-hidden" data-src="images/d01-3.jpg"><img src="images/d01-3-thumb.jpg" class="w-full h-20 object-cover" alt=""></button>
-          <button class="rounded-xl overflow-hidden" data-src="images/d01-4.jpg"><img src="images/d01-4-thumb.jpg" class="w-full h-20 object-cover" alt=""></button>
+          <button class="thumb-active rounded-xl overflow-hidden" data-src="images/d01-1.jpg"><img src="images/d01-1-thumb.jpg" class="w-full h-20 object-cover" alt=""
+     loading="lazy" decoding="async" width="300" height="400"/></button>
+          <button class="rounded-xl overflow-hidden" data-src="images/d01-2.jpg"><img src="images/d01-2-thumb.jpg" class="w-full h-20 object-cover" alt=""
+     loading="lazy" decoding="async" width="300" height="400"/></button>
+          <button class="rounded-xl overflow-hidden" data-src="images/d01-3.jpg"><img src="images/d01-3-thumb.jpg" class="w-full h-20 object-cover" alt=""
+     loading="lazy" decoding="async" width="300" height="400"/></button>
+          <button class="rounded-xl overflow-hidden" data-src="images/d01-4.jpg"><img src="images/d01-4-thumb.jpg" class="w-full h-20 object-cover" alt=""
+     loading="lazy" decoding="async" width="300" height="400"/></button>
         </div>
       </div>
 
@@ -331,19 +341,31 @@
       <h2 class="font-display text-2xl sm:text-3xl">You may also like</h2>
       <div class="mt-4 grid grid-cols-2 sm:grid-cols-4 gap-3 sm:gap-6">
         <a href="product-zahra.html" class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
-          <img src="images/zahra-card.jpg" class="aspect-[3/4] object-cover group-hover:scale-105 transition" alt="Zahra"/>
+          <img src="images/zahra-card.jpg"
+     class="aspect-[3/4] object-cover group-hover:scale-105 transition"
+     alt="Zahra"
+     loading="lazy" decoding="async" width="600" height="800"/>
           <div class="p-3"><p class="text-sm">Zahra</p><p class="text-white/50 text-xs">From RM 249</p></div>
         </a>
         <a href="product-warda.html" class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
-          <img src="images/warda-card.jpg" class="aspect-[3/4] object-cover group-hover:scale-105 transition" alt="Warda"/>
+          <img src="images/warda-card.jpg"
+     class="aspect-[3/4] object-cover group-hover:scale-105 transition"
+     alt="Warda"
+     loading="lazy" decoding="async" width="600" height="800"/>
           <div class="p-3"><p class="text-sm">Warda</p><p class="text-white/50 text-xs">From RM 259</p></div>
         </a>
         <a href="product-maraya.html" class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
-          <img src="images/maraya-card.jpg" class="aspect-[3/4] object-cover group-hover:scale-105 transition" alt="Maraya"/>
+          <img src="images/maraya-card.jpg"
+     class="aspect-[3/4] object-cover group-hover:scale-105 transition"
+     alt="Maraya"
+     loading="lazy" decoding="async" width="600" height="800"/>
           <div class="p-3"><p class="text-sm">Maraya</p><p class="text-white/50 text-xs">From RM 299</p></div>
         </a>
         <a href="index.html#shop" class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
-          <img src="images/collection-card.jpg" class="aspect-[3/4] object-cover" alt="All Collections"/>
+          <img src="images/collection-card.jpg"
+     class="aspect-[3/4] object-cover"
+     alt="All Collections"
+     loading="lazy" decoding="async" width="600" height="800"/>
           <div class="p-3"><p class="text-sm">See all</p><p class="text-white/50 text-xs">Explore collections</p></div>
         </a>
       </div>
