--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <meta property="og:url" content="https://your-domain.com" />
   <meta property="og:image" content="https://your-domain.com/cover.jpg" />
 
+  <link rel="preload" as="image" href="images/hero-poster.jpg">
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,9 +59,7 @@
         <!-- Center: logo -->
         <div class="col-span-1 flex items-center justify-center">
           <a href="#home" aria-label="Arabista Home">
-            <img src="images/logo.png" alt="Arabista logo"
-     class="h-11 w-auto"
-     width="1600" height="1600"/>
+            <img src="images/logo.png" alt="Arabista logo" class="h-11 w-auto"/>
           </a>
         </div>
 
@@ -86,10 +86,9 @@
     <div class="relative max-w-screen-xl mx-auto px-0 sm:px-6">
       <div class="overflow-hidden rounded-none sm:rounded-3xl">
         <div class="relative">
-          <video autoplay muted loop playsinline webkit-playsinline
-       poster="images/hero-poster.jpg"
-       class="w-full h-[70vh] sm:h-[80vh] object-cover brightness-[.75]">
+          <video autoplay muted loop playsinline class="w-full h-[70vh] sm:h-[80vh] object-cover brightness-[.75]">
   <source src="images/hero.mp4" type="video/mp4" />
+  Your browser does not support the video tag.
 </video>
           <div class="absolute inset-0 bg-gradient-to-t from-brand via-transparent"></div>
           <div class="absolute inset-x-0 bottom-0 p-6 sm:p-10">
@@ -115,51 +114,35 @@
     <div class="max-w-screen-xl mx-auto px-4 sm:px-6">
       <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-8 gap-3 sm:gap-6 py-6 sm:py-10">
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-fabric.png" alt="Premium Nidha Dubai fabric"
-     class="w-full h-24 object-cover"
-     loading="lazy" decoding="async" width="600" height="600"/>
+          <img src="images/usp-fabric.png" alt="Premium Nidha Dubai fabric — soft, breathable, and luxurious" class="w-full h-24 object-cover"/>
           <p class="p-2">Premium Nidha Dubai fabric — soft, breathable, and luxurious.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-iron.png" alt="Minimal iron"
-     class="w-full h-24 object-cover"
-     loading="lazy" decoding="async" width="600" height="600"/>
+          <img src="images/usp-iron.png" alt="Minimal iron — wrinkle-resistant for daily wear" class="w-full h-24 object-cover"/>
           <p class="p-2">Minimal iron — wrinkle-resistant for daily wear.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-shawl.png" alt="Complimentary chiffon silk shawl"
-     class="w-full h-24 object-cover"
-     loading="lazy" decoding="async" width="600" height="600"/>
+          <img src="images/usp-shawl.png" alt="Complimentary chiffon silk shawl (100D)" class="w-full h-24 object-cover"/>
           <p class="p-2">Complimentary chiffon silk shawl (100D) with every abaya.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-zip.png" alt="10-inch front zip"
-     class="w-full h-24 object-cover"
-     loading="lazy" decoding="async" width="600" height="600"/>
+          <img src="images/usp-zip.png" alt="10-inch front zip — nursing friendly" class="w-full h-24 object-cover"/>
           <p class="p-2">10-inch front zip — nursing friendly.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-pocket.png" alt="Left and right pockets"
-     class="w-full h-24 object-cover"
-     loading="lazy" decoding="async" width="385" height="385"/>
+          <img src="images/usp-pocket.png" alt="Left and right pockets — style meets function" class="w-full h-24 object-cover"/>
           <p class="p-2">Left and right pockets — style meets function.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-inner-sleeve.png" alt="Inner sleeve lining"
-     class="w-full h-24 object-cover"
-     loading="lazy" decoding="async" width="600" height="600"/>
+          <img src="images/usp-inner-sleeve.png" alt="Inner sleeve lining — wudhu’-friendly and discreet" class="w-full h-24 object-cover"/>
           <p class="p-2">Inner sleeve lining — wudhu’-friendly and discreet.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-box.png" alt="Premium black gift box packaging"
-     class="w-full h-24 object-cover"
-     loading="lazy" decoding="async" width="600" height="600"/>
+          <img src="images/usp-box.png" alt="Premium black gift box packaging" class="w-full h-24 object-cover"/>
           <p class="p-2">Premium black gift box packaging — perfect for gifting.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-courier.png" alt="Free express courier delivery"
-     class="w-full h-24 object-cover"
-     loading="lazy" decoding="async" width="1024" height="1024"/>
+          <img src="images/usp-courier.png" alt="Free express courier delivery nationwide — 1–3 business days" class="w-full h-24 object-cover"/>
           <p class="p-2">Free express courier delivery nationwide — 1–3 business days.</p>
         </div>
       </div>
@@ -180,9 +163,11 @@
         <!-- Dahlia -->
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
-            <img src="images/product-dahlia.png" alt="Dahlia Series"
-     class="w-full h-full object-cover group-hover:scale-105 transition duration-500"
-     loading="lazy" decoding="async" width="864" height="1184"/>
+            <picture>
+  <source srcset="images/product-dahlia.avif" type="image/avif">
+  <source srcset="images/product-dahlia.webp" type="image/webp">
+  <img src="images/product-dahlia.png" alt="Dahlia Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184">
+</picture>
           </div>
           <div class="p-3 sm:p-4">
             <h3 class="font-display text-lg">Dahlia Series</h3>
@@ -197,9 +182,11 @@
         <!-- Zahra -->
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
-            <img src="images/product-zahra.png" alt="Zahra Series"
-     class="w-full h-full object-cover group-hover:scale-105 transition duration-500"
-     loading="lazy" decoding="async" width="864" height="1184"/>
+            <picture>
+  <source srcset="images/product-zahra.avif" type="image/avif">
+  <source srcset="images/product-zahra.webp" type="image/webp">
+  <img src="images/product-zahra.png" alt="Zahra Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184">
+</picture>
           </div>
           <div class="p-3 sm:p-4">
             <h3 class="font-display text-lg">Zahra Series</h3>
@@ -214,9 +201,11 @@
         <!-- Warda -->
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
-            <img src="images/product-warda.png" alt="Warda Series"
-     class="w-full h-full object-cover group-hover:scale-105 transition duration-500"
-     loading="lazy" decoding="async" width="864" height="1184"/>
+            <picture>
+  <source srcset="images/product-warda.avif" type="image/avif">
+  <source srcset="images/product-warda.webp" type="image/webp">
+  <img src="images/product-warda.png" alt="Warda Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184">
+</picture>
           </div>
           <div class="p-3 sm:p-4">
             <h3 class="font-display text-lg">Warda Series</h3>
@@ -231,9 +220,11 @@
         <!-- Maraya -->
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
-            <img src="images/product-maraya.png" alt="Maraya Series"
-     class="w-full h-full object-cover group-hover:scale-105 transition duration-500"
-     loading="lazy" decoding="async" width="864" height="1184"/>
+            <picture>
+  <source srcset="images/product-maraya.avif" type="image/avif">
+  <source srcset="images/product-maraya.webp" type="image/webp">
+  <img src="images/product-maraya.png" alt="Maraya Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184">
+</picture>
           </div>
           <div class="p-3 sm:p-4">
             <h3 class="font-display text-lg">Maraya Series</h3>
@@ -264,9 +255,11 @@
           </p>
         </div>
         <div class="overflow-hidden rounded-2xl shadow-soft">
-          <img src="images/about-story.png" alt="Arabista craftsmanship"
-     class="w-full h-full object-cover"
-     loading="lazy" decoding="async" width="1344" height="768"/>
+          <picture>
+  <source srcset="images/about-story.avif" type="image/avif">
+  <source srcset="images/about-story.webp" type="image/webp">
+  <img src="images/about-story.png" alt="Arabista craftsmanship" class="w-full h-full object-cover" loading="lazy" decoding="async" width="1344" height="768">
+</picture>
         </div>
       </div>
     </div>
@@ -275,9 +268,11 @@
   <!-- Contact / WhatsApp CTA -->
   <section id="contact" class="relative reveal mt-6">
     <div class="absolute inset-0">
-      <img src="images/contact-whatsapp.png" alt="Contact Arabista on WhatsApp"
-     class="w-full h-full object-cover brightness-50 blur-sm"
-     loading="lazy" decoding="async" width="1024" height="1024"/>
+      <picture>
+  <source srcset="images/contact-whatsapp.avif" type="image/avif">
+  <source srcset="images/contact-whatsapp.webp" type="image/webp">
+  <img src="images/contact-whatsapp.png" alt="Contact Arabista on WhatsApp" class="w-full h-full object-cover brightness-50 blur-sm" loading="lazy" decoding="async" width="1024" height="1024">
+</picture>
       <div class="absolute inset-0 bg-gradient-to-t from-brand/85 via-brand/70 to-brand/60"></div>
     </div>
     <div class="relative max-w-screen-md mx-auto px-4 sm:px-6 py-16 text-center">
