--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://your-domain.com" />
   <meta property="og:image" content="https://your-domain.com/cover.jpg" />
-
-  <link rel="preload" as="image" href="images/hero-poster.jpg">
-
-  <!-- Fonts -->
+<!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -59,7 +56,7 @@
         <!-- Center: logo -->
         <div class="col-span-1 flex items-center justify-center">
           <a href="#home" aria-label="Arabista Home">
-            <img src="images/logo.png" alt="Arabista logo" class="h-11 w-auto"/>
+            <img src="images/logo.png" alt="Arabista logo" class="h-11 w-auto" width="1600" height="1600"/>
           </a>
         </div>
 
@@ -86,9 +83,10 @@
     <div class="relative max-w-screen-xl mx-auto px-0 sm:px-6">
       <div class="overflow-hidden rounded-none sm:rounded-3xl">
         <div class="relative">
-          <video autoplay muted loop playsinline class="w-full h-[70vh] sm:h-[80vh] object-cover brightness-[.75]">
+          <video autoplay muted loop playsinline webkit-playsinline
+       poster="images/hero-poster.jpg"
+       class="w-full h-[70vh] sm:h-[80vh] object-cover brightness-[.75]">
   <source src="images/hero.mp4" type="video/mp4" />
-  Your browser does not support the video tag.
 </video>
           <div class="absolute inset-0 bg-gradient-to-t from-brand via-transparent"></div>
           <div class="absolute inset-x-0 bottom-0 p-6 sm:p-10">
@@ -114,40 +112,58 @@
     <div class="max-w-screen-xl mx-auto px-4 sm:px-6">
       <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-8 gap-3 sm:gap-6 py-6 sm:py-10">
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-fabric.png" alt="Premium Nidha Dubai fabric — soft, breathable, and luxurious" class="w-full h-24 object-cover"/>
+          <img src="images/usp-fabric.png" alt="Premium Nidha Dubai fabric"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="600" height="600"/>
           <p class="p-2">Premium Nidha Dubai fabric — soft, breathable, and luxurious.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-iron.png" alt="Minimal iron — wrinkle-resistant for daily wear" class="w-full h-24 object-cover"/>
+          <img src="images/usp-iron.png" alt="Minimal iron"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="600" height="600"/>
           <p class="p-2">Minimal iron — wrinkle-resistant for daily wear.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-shawl.png" alt="Complimentary chiffon silk shawl (100D)" class="w-full h-24 object-cover"/>
+          <img src="images/usp-shawl.png" alt="Complimentary chiffon silk shawl"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="600" height="600"/>
           <p class="p-2">Complimentary chiffon silk shawl (100D) with every abaya.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-zip.png" alt="10-inch front zip — nursing friendly" class="w-full h-24 object-cover"/>
+          <img src="images/usp-zip.png" alt="10-inch front zip"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="600" height="600"/>
           <p class="p-2">10-inch front zip — nursing friendly.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-pocket.png" alt="Left and right pockets — style meets function" class="w-full h-24 object-cover"/>
+          <img src="images/usp-pocket.png" alt="Left and right pockets"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="385" height="385"/>
           <p class="p-2">Left and right pockets — style meets function.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-inner-sleeve.png" alt="Inner sleeve lining — wudhu’-friendly and discreet" class="w-full h-24 object-cover"/>
+          <img src="images/usp-inner-sleeve.png" alt="Inner sleeve lining"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="600" height="600"/>
           <p class="p-2">Inner sleeve lining — wudhu’-friendly and discreet.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-box.png" alt="Premium black gift box packaging" class="w-full h-24 object-cover"/>
+          <img src="images/usp-box.png" alt="Premium black gift box packaging"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="600" height="600"/>
           <p class="p-2">Premium black gift box packaging — perfect for gifting.</p>
         </div>
         <div class="text-center text-xs sm:text-sm border border-white/10 rounded-2xl overflow-hidden">
-          <img src="images/usp-courier.png" alt="Free express courier delivery nationwide — 1–3 business days" class="w-full h-24 object-cover"/>
+          <img src="images/usp-courier.png" alt="Free express courier delivery"
+     class="w-full h-24 object-cover"
+     loading="lazy" decoding="async" width="1024" height="1024"/>
           <p class="p-2">Free express courier delivery nationwide — 1–3 business days.</p>
         </div>
       </div>
     </div>
   </section>
+
+  
 
   <!-- Product Highlights -->
   <section id="shop" class="reveal">
