--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="Premium Nidha Dubai fabric, practical features, and timeless designs that celebrate faith and style." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://your-domain.com" />
-  <link rel="preload" as="image" href="images/hero-poster.jpg" fetchpriority="high">
+  <link rel="preload" as="image" href="images/hero-poster.webp" fetchpriority="high">
   <meta property="og:image" content="https://your-domain.com/cover.jpg" />
 <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -71,9 +71,9 @@
       <div class="overflow-hidden rounded-none sm:rounded-3xl">
         <div class="relative">
           <video autoplay muted loop playsinline webkit-playsinline
-       poster="images/hero-poster.jpg"
+       poster="images/hero-poster.webp"
        class="w-full h-[70vh] sm:h-[80vh] object-cover brightness-[.75]" preload="metadata">
-  <source src="images/hero.mp4" type="video/mp4" />
+  <source src="images/hero-ios-540p-optimized.mp4" type="video/mp4" />
 </video>
           <div class="absolute inset-0 bg-gradient-to-t from-brand via-transparent"></div>
           <div class="absolute inset-x-0 bottom-0 p-6 sm:p-10">
@@ -199,9 +199,9 @@
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
             <picture>
-<source srcset="images/product-dahlia.avif" type="image/avif">
-  <source srcset="images/product-dahlia.webp" type="image/webp">
-  <img src="images/product-dahlia.png" alt="Dahlia Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184">
+<source srcset="images/product-dahlia-480.avif 480w, images/product-dahlia-768.avif 768w, images/product-dahlia.avif 864w" type="image/avif">
+  <source srcset="images/product-dahlia-480.webp 480w, images/product-dahlia-768.webp 768w, images/product-dahlia.webp 864w" type="image/webp">
+  <img src="images/product-dahlia.png" alt="Dahlia Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184" sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw">
 </picture>
           </div>
           <div class="p-3 sm:p-4">
@@ -218,9 +218,9 @@
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
             <picture>
-<source srcset="images/product-zahra.avif" type="image/avif">
-  <source srcset="images/product-zahra.webp" type="image/webp">
-  <img src="images/product-zahra.png" alt="Zahra Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184">
+<source srcset="images/product-zahra-480.avif 480w, images/product-zahra-768.avif 768w, images/product-zahra.avif 864w" type="image/avif">
+  <source srcset="images/product-zahra-480.webp 480w, images/product-zahra-768.webp 768w, images/product-zahra.webp 864w" type="image/webp">
+  <img src="images/product-zahra.png" alt="Zahra Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184" sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw">
 </picture>
           </div>
           <div class="p-3 sm:p-4">
@@ -237,9 +237,9 @@
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
             <picture>
-<source srcset="images/product-warda.avif" type="image/avif">
-  <source srcset="images/product-warda.webp" type="image/webp">
-  <img src="images/product-warda.png" alt="Warda Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184">
+<source srcset="images/product-warda-480.avif 480w, images/product-warda-768.avif 768w, images/product-warda.avif 864w" type="image/avif">
+  <source srcset="images/product-warda-480.webp 480w, images/product-warda-768.webp 768w, images/product-warda.webp 864w" type="image/webp">
+  <img src="images/product-warda.png" alt="Warda Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184" sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw">
 </picture>
           </div>
           <div class="p-3 sm:p-4">
@@ -256,9 +256,9 @@
         <article class="group overflow-hidden rounded-2xl border border-white/10 hover:border-white/20 transition">
           <div class="aspect-[3/4] overflow-hidden">
             <picture>
-<source srcset="images/product-maraya.avif" type="image/avif">
-  <source srcset="images/product-maraya.webp" type="image/webp">
-  <img src="images/product-maraya.png" alt="Maraya Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184">
+<source srcset="images/product-maraya-480.avif 480w, images/product-maraya-768.avif 768w, images/product-maraya.avif 864w" type="image/avif">
+  <source srcset="images/product-maraya-480.webp 480w, images/product-maraya-768.webp 768w, images/product-maraya.webp 864w" type="image/webp">
+  <img src="images/product-maraya.png" alt="Maraya Series" class="w-full h-full object-cover group-hover:scale-105 transition duration-500" loading="lazy" decoding="async" width="864" height="1184" sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw">
 </picture>
           </div>
           <div class="p-3 sm:p-4">
@@ -291,9 +291,9 @@
         </div>
         <div class="overflow-hidden rounded-2xl shadow-soft">
           <picture>
-<source srcset="images/about-story.avif" type="image/avif">
-  <source srcset="images/about-story.webp" type="image/webp">
-  <img src="images/about-story.png" alt="Arabista craftsmanship" class="w-full h-full object-cover" loading="lazy" decoding="async" width="1344" height="768">
+<source srcset="images/about-story-480.avif 480w, images/about-story-768.avif 768w, images/about-story.avif 1344w" type="image/avif">
+  <source srcset="images/about-story-480.webp 480w, images/about-story-768.webp 768w, images/about-story.webp 1344w" type="image/webp">
+  <img src="images/about-story.png" alt="Arabista craftsmanship" class="w-full h-full object-cover" loading="lazy" decoding="async" width="1344" height="768" sizes="(max-width: 640px) 100vw, 50vw">
 </picture>
         </div>
       </div>
