--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
         <!-- Center: logo -->
         <div class="col-span-1 flex items-center justify-center">
           <a href="#home" aria-label="Arabista Home">
-            <picture>
-  <source srcset="images/logo.avif" type="image/avif">
-  <source srcset="images/logo.webp" type="image/webp">
-  <img src="images/logo.png" alt="Arabista logo" class="h-11 w-auto" width="1600" height="1600">
-</picture>
+            <img src="images/logo-88.webp" alt="Arabista logo" class="h-11 w-auto" width="88" height="88">
           </a>
         </div>
 
